# MLflow-Basics

./: .gitignore  README.md  example.py  pyproject.toml
mlruns/0/: meta.yaml
mlruns/0/02d826b1c63b4b48add5ad2ce4bba6d9/: meta.yaml
mlruns/0/02d826b1c63b4b48add5ad2ce4bba6d9/artifacts/model/: model.pkl
mlruns/0/02d826b1c63b4b48add5ad2ce4bba6d9/metrics/: mae  r2  rmse
mlruns/0/02d826b1c63b4b48add5ad2ce4bba6d9/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/72e32721375b42a293309d416c2c7da7/: meta.yaml
mlruns/0/72e32721375b42a293309d416c2c7da7/metrics/: mae  r2  rmse
mlruns/0/72e32721375b42a293309d416c2c7da7/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/9652973a16294261886790bf4f8ef603/: meta.yaml
mlruns/0/9652973a16294261886790bf4f8ef603/metrics/: mae  r2  rmse
mlruns/0/9652973a16294261886790bf4f8ef603/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/96c9f4daf443420ba979dfe85f9ab313/: meta.yaml
mlruns/0/96c9f4daf443420ba979dfe85f9ab313/metrics/: mae  r2  rmse
mlruns/0/96c9f4daf443420ba979dfe85f9ab313/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/d252c7166d5641f4b73de2df9852a279/: meta.yaml
mlruns/0/d252c7166d5641f4b73de2df9852a279/metrics/: mae  r2  rmse
mlruns/0/d252c7166d5641f4b73de2df9852a279/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/dcfe87871d2045c594ff700ae4a36719/: meta.yaml
mlruns/0/dcfe87871d2045c594ff700ae4a36719/metrics/: mae  r2  rmse
mlruns/0/dcfe87871d2045c594ff700ae4a36719/tags/: mlflow.log-model.history  mlflow.runName
(+11 files in other folders)
