[tool.poetry]
name = "mlflow-project"
version = "0.1.0"
description = ""
authors = ["Nishanthan Kamaleson <n.kamaleson@harbourrockcapital.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
mlflow = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
